<resources>
    <string name="app_name">WD_App</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to activity_view_groups -->
    <string name="title">Twoje grupy</string>
    <string name="subject">Przedmiot</string>
    <string name="group">Grupa</string>

    <!-- Strings related to main page -->
    <string name="main_hello">Witaj Studencie!</string>
    <string name="main_hello_admin">Administrator:</string>
    <string name="button_add_to_group">Dołącz do grupy</string>
    <string name="view_my_gropus">Zobacz moje grupy</string>
    <string name="WD_add_subject">Dodaj przedmiot</string>
    <string name="WD_add_student">Dodaj studenta</string>
    <string name="WD_name_subject">Podaj nazwe przedmiotu</string>
    <string name="WD_insert_code">Wprowadz kod grupy</string>
    <string name="WD_insert_vaccancy">Podaj maksymalną liczebność grupy</string>
    <string name="WD_add_group">Dodaj nową grupę</string>
    <string name="WD_delete_group">Usuń grupę</string>
    <string name="WD_delete_label">Wybierz grupę do usunięcia</string>

    <!-- Strings related to join groupd page -->
    <string name="pick_out_group">Dopasuj swoje grupy</string>
    <string name="submit">Zatwierdź</string>

    <!-- Strings related to login -->
    <string name="prompt_index">Index</string>
    <string name="prompt_password">Hasło</string>
    <string name="action_login">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_index">Indeks jest niepoprawny</string>
    <string name="error_invalid_password">Hasło jest za krótkie lub za długie</string>
    <string name="error_incorrect_password">Hasło jest niepoprawne</string>
    <string name="error_field_required">To pole jest wymagane</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
